--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -52,8 +52,8 @@
 \location{2015 - 2018 | Geneva, Switzerland}
 \begin{tightemize}
 \item Analysed proton-proton collision data collected by ATLAS detector.
-\item Developed a new object-oriented programming framework using C++ to increase the performance and accuracy of the real election efficiency measurement.
 \item Used Python with PyROOT to perform data analysis and automate the visualization of results.
+\item Developed a new object-oriented programming framework using C++ to increase the performance and accuracy of the real election efficiency measurement. The new framework can process datasets 10 times larger than the previous one, automate analysis procedures reducing a week manual operations to an afternoon, and increase the accuracy upto 98\%.
 %\item Co-developed and maintained the C++ based Tag-and-probe framework.
 \end{tightemize}
 \sectionsep
@@ -63,7 +63,8 @@
 \location{2011 - 2018 | Norman, Oklahoma}
 \begin{tightemize}
 \item Teaching assistant for many courses. Helped professors to grade homework, proctor exams, and compile student achievement statistics.
-\item Dedicated to the search of supersymmertic particles. Implemented various statistical methods using C++ and python to analyse data.
+\item Dedicated to the search of supersymmertic particles. Used C++ and Python to implement toy Monte Carlo, cut and count, maximum likelihood, and least Chi square fit to analyse collision data within 95\% confidence level.
+\item Published 5 journal papers and 7 conference notes, and presented in 2 conferences.
 \end{tightemize}
 \sectionsep
 
@@ -71,8 +72,9 @@
 \descript{| Research Assistant}
 \location{2009 - 2011 | Taipei, Taiwan}
 \begin{tightemize}
-\item Used C++ with GEANT4 package to simulate the ambient background radiation.
-\item Helped the Tsinghua University to setup the China Jinping Underground Laboratory.
+\item Performed Monte Carlo simulation of the physics processes using C++ with GEANT4 package.
+\item Analysed the kinematic distributions of the MC simulated events.
+%\item Helped the Tsinghua University to setup the China Jinping Underground Laboratory.
 \end{tightemize}
 \sectionsep
 
@@ -80,40 +82,11 @@
 \descript{| SPICE R\&D engineer}
 \location{2006 - 2009 | Hsinchu, Taiwan}
 \begin{tightemize}
-\item High-voltage SPICE model development including probe station automation, SPICE modeling, and customer support.
-\item Cross departments model SPEC discussion, schedule arrangement, raw data measurement, model parameters extraction, complete model establishment, model accuracy validation, and model documentation.
+\item High-voltage SPICE (Simulation Program with Integrated Circuit Emphasis) model data collection automation, model parameterization, model accuracy validation, model documentation, and customer support.
+\item Cross departments discussion about SPICE model specification, production planning and scheduling.
 %\item
 \end{tightemize}
 \sectionsep
-
-% \runsubsection{Coursera}
-% \descript{| KPCB Fellow + Software Engineering Intern }
-% \location{Expected June 2014 – Sep 2014 | Mountain View, CA}
-% \vspace{\topsep} % Hacky fix for awkward extra vertical space
-% \begin{tightemize}
-% \item 52 out of 2500 applicants chosen to be a KPCB Fellow 2014.
-% \end{tightemize}
-% \sectionsep
-
-% \runsubsection{Google}
-% \descript{| Software Engineering Intern }
-% \location{May 2013 – Aug 2013 | Mountain View, CA}
-% \begin{tightemize}
-% \item Worked on the YouTube Captions team in primarily vanilla Javascript and Python to plan, design and develop the full stack implementation of a new framework to add and edit Automatic Speech Recognition captions.
-% \item Created a backbone.js-like framework for the Captions editor.
-% \item All code was reviewed, perfected, and pushed to production.
-% \end{tightemize}
-% \sectionsep
-
-% \runsubsection{Phabricator}
-% \descript{| Open Source Contributor \& Team Leader}
-% \location{Jan 2013 – May 2013 | Palo Alto, CA \& Ithaca, NY}
-% \begin{tightemize}
-% \item Phabricator is used daily by Facebook, Dropbox, Quora, Asana and more.
-% \item I created the Meme generator, the entire Lipsum application, ported Tokens to different apps, fixed many bugs and more in PHP and Shell.
-% \item Led a team from MIT, Cornell, IC London and UHelsinki for the project.
-% \end{tightemize}
-% \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
@@ -154,8 +127,7 @@
 \section{Skills}
 % \subsection{Languages:}
 % %\location{}
-Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} C/C++ \textbullet{} object-oriented programming \textbullet{} Shell script \textbullet{} Python/Matplotlib/Pandas \textbullet{} HTML \textbullet{} \LaTeX\ \textbullet{} SQL \textbullet{} Git \textbullet{} Vim \textbullet{} Statistics \textbullet{} Data analysis \textbullet{} cross department communication \textbullet{} teamwork\\
-% HTML \textbullet{} \LaTeX\ \\
+Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} C/C++ \textbullet{} object-oriented programming \textbullet{} Shell script \textbullet{} Python/Matplotlib/Pandas \textbullet{} HTML \textbullet{} \LaTeX\ \textbullet{} SQL \textbullet{} VBA \textbullet{} Git/SVN \textbullet{} Vim \textbullet{} ROOT framework \textbullet{} Statistics \textbullet{} Data analysis \textbullet{} cross department communication \textbullet{} teamwork\\
 % \subsection{Frameworks:}
 % ROOT
 % \subsection{Databases:}
@@ -172,125 +144,10 @@ Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} C/
 \section{Leadership}
 President of Taiwanese Student Association (TSA) at the University of Oklahoma\\
 \location{2012 - 2013}
-\begin{tightemize}
-\item Organized several TSA events in campus and participated in the joint events with the Taiwanese community in Oklahoma.
-\item Led TSA to win the first place of the Eve of Nations at the University of Oklahoma.
-\end{tightemize}
-% .\\
+%\begin{tightemize}
+%\item Organized several TSA events in campus and participated in the joint events with the Taiwanese community in Oklahoma.
+%\item Led TSA to win the first place of the Eve of Nations at the University of Oklahoma.
+%\end{tightemize}
 \sectionsep
 
-
-
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%     COLUMN ONE
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{minipage}[t]{0.33\textwidth}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     LINKS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\section{Links} 
-%Github:// \href{https://github.com/deedydas}{\custombold{deedydas}} \\
-%LinkedIn://  \href{https://www.linkedin.com/in/debarghyadas}{\custombold{debarghyadas}} \\
-%YouTube://  \href{https://www.youtube.com/user/DeedyDash007}{\custombold{DeedyDash007}} \\
-%Twitter://  \href{https://twitter.com/debarghya_das}{\custombold{@debarghya\_das}} \\
-%Quora://  \href{https://www.quora.com/Debarghya-Das}{\custombold{Debarghya-Das}}
-%\sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     COURSEWORK
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\section{Coursework}
-%\subsection{Graduate}
-%Advanced Machine Learning \\
-%Open Source Software Engineering \\
-%Advanced Interactive Graphics \\
-%Compilers + Practicum \\
-%Cloud Computing \\
-%\sectionsep
-
-%\subsection{Undergraduate}
-%Information Retrieval \\
-%Operating Systems \\
-%Artificial Intelligence + Practicum \\
-%Functional Programming \\
-%Computer Graphics + Practicum \\
-%{\footnotesize \textit{\textbf{(Research Asst. \& Teaching Asst) }}} \\
-%Unix Tools and Scripting \\
-%\sectionsep
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%     COLUMN TWO
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \end{minipage} 
-% \hfill
-% \begin{minipage}[t]{0.66\textwidth} 
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     RESEARCH
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{Research}
-% \runsubsection{Cornell Robot Learning Lab}
-% \descript{| Head Undergrad Research}
-% \location{Jan 2014 – Present | Ithaca, NY}
-% Worked with \textbf{\href{http://www.cs.cornell.edu/~ashesh/}{Ashesh Jain}} and \textbf{\href{http://www.cs.cornell.edu/~asaxena/}{Prof Ashutosh Saxena}} to create \textbf{PlanIt}, a tool which  learns from large scale user preference feedback to plan robot trajectories in human environments.  Publication submitted.
-% \sectionsep
-
-% \runsubsection{Cornell Phonetics Lab}
-% \descript{| Head Undergraduate Researcher}
-% \location{Mar 2012 – May 2013 | Ithaca, NY}
-% Lead the development of \textbf{QuickTongue}, the first ever breakthrough tongue-controlled game with \textbf{\href{http://conf.ling.cornell.edu/~tilsen/}{Prof Sam Tilsen}} to aid in Linguistics research. Publication submitted.
-% \sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     AWARDS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\section{Awards} 
-%\begin{tabular}{rll}
-%2014	     & top 52/2500  & KPCB Engineering Fellow\\
-%2014	     & 2\textsuperscript{nd} most points  & Google Code Jam, Qualification Round\\
-%2014	     & 1\textsuperscript{st}/50  & Microsoft Coding Competition, Cornell\\
-%2013	     & National  & Jump Trading Challenge Finalist\\
-%2013     & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament  \\
-%2012     & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
-%2011     & National & Indian National Mathematics Olympiad (INMO) Finalist \\
-%2010     & National & Comp. Soc. of India's National Programming Contest\\
-%\end{tabular}
-%\sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     SOCIETIES
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\section{Societies} 
-
-%\begin{tabular}{rll}
-%2014 	& top 12\%ile    & Tau Beta Pi Engineering Honor Society\\
-%2014   & National   & The Global Leadership and Education Forum (tGELF)\\
-%2012   &  National  & Golden Key International Honor Society\\
-%2012   &  National   & National Society of Collegiate Scholars\\
-%\end{tabular}
-%\sectionsep
-
-% \end{minipage} 
 \end{document}
