--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -53,7 +53,7 @@
 \begin{tightemize}
 \item Analysed proton-proton collision data collected by ATLAS detector.
 \item Used Python with PyROOT to perform data analysis and automate the visualization of results.
-\item Developed a new object-oriented programming framework using C++ to increase the performance and accuracy of the real election efficiency measurement. The new framework can process datasets 10 times larger than the previous one, automate analysis procedures reducing a week manual operations to an afternoon, and increase the accuracy upto 98\%.
+\item Developed a new object-oriented programming framework using C++ to increase the performance and accuracy of the real election efficiency measurement. The new framework can process datasets 10 times larger than the previous one, automate analysis procedures reducing a week manual operations to an afternoon, and increase the efficiency upto 98\%.
 %\item Co-developed and maintained the C++ based Tag-and-probe framework.
 \end{tightemize}
 \sectionsep
@@ -127,7 +127,7 @@
 \section{Skills}
 % \subsection{Languages:}
 % %\location{}
-Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} C/C++ \textbullet{} object-oriented programming \textbullet{} Shell script \textbullet{} Python/Matplotlib/Pandas \textbullet{} HTML \textbullet{} \LaTeX\ \textbullet{} SQL \textbullet{} VBA \textbullet{} Git/SVN \textbullet{} Vim \textbullet{} ROOT framework \textbullet{} Statistics \textbullet{} Data analysis \textbullet{} cross department communication \textbullet{} teamwork\\
+Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} C/C++ \textbullet{} object-oriented programming \textbullet{} Shell script \textbullet{} Python/Matplotlib/Pandas \textbullet{} Fortran 77/95 \textbullet{} HTML \textbullet{} \LaTeX\ \textbullet{} SQL \textbullet{} VBA \textbullet{} Git/SVN \textbullet{} Vim \textbullet{} ROOT framework \textbullet{} Statistics \textbullet{} Data analysis \textbullet{} cross department communication \textbullet{} teamwork\\
 % \subsection{Frameworks:}
 % ROOT
 % \subsection{Databases:}
