move skill section

--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -42,6 +42,24 @@
 %\section{Objective}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     SKILLS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Skills}
+% \subsection{Languages:}
+% %\location{}
+\raggedright{
+	Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} C/C++ \textbullet{} object-oriented programming \textbullet{} Shell script \textbullet{} Python/Matplotlib/Pandas/Numpy \textbullet{} Fortran 77/95 \textbullet{} HTML \textbullet{} \LaTeX\ \textbullet{} SQL \textbullet{} VBA \textbullet{} Git/SVN \textbullet{} Vim \textbullet{} ROOT framework \textbullet{} Statistics \textbullet{} Data analysis \textbullet{} cross department communication \textbullet{} teamwork\\
+	}
+% \subsection{Frameworks:}
+% ROOT
+% \subsection{Databases:}
+% SQL
+% \subsection{Tools:}
+% Git \textbullet{} Vim
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -62,7 +80,7 @@
 \descript{| Graduate Research Assistant}
 \location{2011 - 2018 | Norman, Oklahoma}
 \begin{tightemize}
-\item Teaching assistant for many courses. Helped professors to grade homework, proctor exams, and compile student achievement statistics.
+\item Been teaching assistant and helped professors to grade homework, proctor exams, and compile student achievement statistics for many courses.
 \item Dedicated to the search of supersymmertic particles. Used C++ and Python to implement toy Monte Carlo, cut and count, maximum likelihood, and least Chi square fit to analyse collision data within 95\% confidence level.
 \item Published 5 journal papers and 7 conference notes, and presented in 2 conferences.
 \end{tightemize}
@@ -116,26 +134,9 @@
 \location{1998 - 2002 | Chung Li, Taiwan}
 \begin{tightemize}
 \item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
-\item Certification of Academic Achievement Award, 2000 - 2001
+\item Certificate of Academic Achievement Award, 2000 - 2001
 \end{tightemize}
 \sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     SKILLS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Skills}
-% \subsection{Languages:}
-% %\location{}
-Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} C/C++ \textbullet{} object-oriented programming \textbullet{} Shell script \textbullet{} Python/Matplotlib/Pandas \textbullet{} Fortran 77/95 \textbullet{} HTML \textbullet{} \LaTeX\ \textbullet{} SQL \textbullet{} VBA \textbullet{} Git/SVN \textbullet{} Vim \textbullet{} ROOT framework \textbullet{} Statistics \textbullet{} Data analysis \textbullet{} cross department communication \textbullet{} teamwork\\
-% \subsection{Frameworks:}
-% ROOT
-% \subsection{Databases:}
-% SQL
-% \subsection{Tools:}
-% Git \textbullet{} Vim
-\sectionsep
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LEADERSHIP
