--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -47,7 +47,8 @@
 \opening{Dear madam or sir to whom it may concern:}
 %\opening{To whom it may concern:}
 %\opening{Dear HIRING_MANAGER_NAME:}
-\closing{Yours faithfully,}
+\closing{Yours faithfully,} % 非以對方姓氏稱呼對方時
+%\closing{Yours sincerely,} % 知道對方姓氏時
 \enclosure[Attached]{resume}
 
 \makelettertitle
@@ -65,7 +66,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \justifying
-I am excited to apply for the position of JOBPOSITION (job id: JOBID) with COMPANY.
+I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
 My resume containing detailed work experience and education is attached.
 (USE A SENTENCE TO DESCRIBE THE REASON WHY APPLYING FOR THIS POSITION AT HERE.)
 
@@ -74,11 +75,12 @@ I am familiar with the C/C++ and Python languages because my doctorial research 
 Considering the differences between academia and industry, I am taking data analysis and machine learning courses from Codecademy and Coursera to help me to switch from the academia to the industry smoothly.
 My physics Ph.D. background trained me to become a careful researcher and strengthened my problem solving skills allowing me to find the best way to reach correct answers.
 Because CERN is an international orginazation, my time at CERN also taught me how to work with colleagues coming from different countries with different cultures.
+
 I think my experience makes me an unique candidate to fit this challenging position and I would be able to benefit your team.
-
 Thank you very much for your time and consideration and I look forward to hearing from you.
+You can reach me by email or my phone number listed at the top right corner.
 
-%\vspace{0.5cm}
+\vspace{0.5cm}
 
 \makeletterclosing
 \end{document}
