--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -68,14 +68,14 @@
 \justifying
 I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
 My resume containing detailed work experience and education is attached.
-(USE A SENTENCE TO DESCRIBE THE REASON WHY APPLYING FOR THIS POSITION AT HERE.)
+%(USE A SENTENCE TO DESCRIBE THE REASON WHY APPLYING FOR THIS POSITION AT HERE.)
 
-For the last three years I have worked in analyzing the data at CERN where I was responsible for the analysis of two physics processes using the data collected by the experiment and also for developing a new software framework to enhance the performance.
-I am familiar with the C/C++ and Python languages because my doctorial research heavily relies on programming to analyze data.
-Considering the differences between academia and industry, I am taking data analysis and machine learning courses from Codecademy and Coursera to help me to switch from the academia to the industry smoothly.
-
+%For the last three years I have worked in analyzing the data at CERN where I was responsible for the analysis of two physics processes using the data collected by the experiment and also for developing a new software framework to enhance the performance.
+%I am familiar with the C/C++ and Python languages because my doctorial research heavily relies on programming to analyze data.
+For the last three years I have worked in analyzing the data at CERN for my dissertation using C/C++ and Python.
 My physics Ph.D. background trained me to become a careful researcher and strengthened my problem solving skills allowing me to find the best way to reach correct answers.
 Because CERN is an international orginazation, my time at CERN also taught me how to work with colleagues coming from different countries with different cultures.
+Considering the differences between academia and industry, I am taking data analysis and machine learning courses from Codecademy and Coursera to help me to switch from the academia to the industry smoothly.
 
 I think my experience makes me an unique candidate to fit this challenging position and I would be able to benefit your team.
 I look forward to hearing from you.
