--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -49,7 +49,7 @@
 % \subsection{Languages:}
 % %\location{}
 \raggedright{
-	Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} C/C++ \textbullet{} object-oriented programming \textbullet{} Shell script \textbullet{} Python/Matplotlib/Pandas/Numpy \textbullet{} Fortran 77/95 \textbullet{} HTML \textbullet{} \LaTeX\ \textbullet{} SQL \textbullet{} VBA \textbullet{} Git/SVN \textbullet{} Vim \textbullet{} ROOT framework \textbullet{} Statistics \textbullet{} Data analysis \textbullet{} cross department communication \textbullet{} teamwork\\
+	C/C++ \textbullet{} Python \textbullet{} Shell script \textbullet{} SQL \textbullet{} Machine learning \textbullet{} Mac OS/Linux \textbullet{} Microsoft Office/Apple Keynote/Pages \textbullet{} basic HTML \textbullet{} \LaTeX\ \textbullet{} Git/SVN \textbullet{} Vim \textbullet{} ROOT framework \textbullet{} Statistics \textbullet{} Data analysis \textbullet{} cross department communication \textbullet{} teamwork\\
 }
 % \subsection{Frameworks:}
 % ROOT
@@ -113,7 +113,8 @@
 \section{Education} 
 
 \runsubsection{University of Oklahoma}
-\descript{| Ph.D. in Physics | Cum. GPA: 3.47 / 4.00}
+%\descript{| Ph.D. in Physics | Cum. GPA: 3.47 / 4.00}
+\descript{| Ph.D. in Physics}
 \location{2011 - 2018 | Norman, OK}
 \begin{tightemize}
 \item \href{https://hdl.handle.net/11244/299774}{\color{link}{Dissertation link}}
@@ -121,7 +122,8 @@
 \sectionsep
 
 \runsubsection{National Taiwan University}
-\descript{| M.S. in Physics | Cum. GPA: 3.86 / 4.00}
+%\descript{| M.S. in Physics | Cum. GPA: 3.86 / 4.00}
+\descript{| M.S. in Physics}
 \location{2003 - 2006 | Taipei, Taiwan}
 \begin{tightemize}
 \item \href{http://www.airitilibrary.com/Publication/alDetailedMesh1?DocID=U0001-1407200616551200}{\color{link}{Thesis link}}
@@ -129,14 +131,14 @@
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Chung Yuan Christian University}
-\descript{| B.S. in Physics | Cum. GPA: 3.53 / 4.00}
-\location{1998 - 2002 | Chung Li, Taiwan}
-\begin{tightemize}
-\item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
-\item Certificate of Academic Achievement Award, 2000 - 2001
-\end{tightemize}
-\sectionsep
+%\runsubsection{Chung Yuan Christian University}
+%\descript{| B.S. in Physics | Cum. GPA: 3.53 / 4.00}
+%\location{1998 - 2002 | Chung Li, Taiwan}
+%\begin{tightemize}
+%\item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
+%\item Certificate of Academic Achievement Award, 2000 - 2001
+%\end{tightemize}
+%\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LEADERSHIP
