Update cover letter

--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -63,25 +63,51 @@
 % 4. structure & format & language
 % 5. 約 120 or 150 字
 %
+%
+% 1. Create a professional header with your info.
+% 2. Address the hiring manager by name.
+% 3. Show relevant achievements to introduce yourself in the first paragraph.
+% 4. Target the employer’s needs and prove you can help in the second paragraph.
+% 求職信第二段的剩餘部分應該是關於您以前的經歷將如何幫助您未來的雇主推進他們的計劃
+% 5. Explain why you want to join and convince the employer you want to stay in the third paragraph.
+% 6. Reiterate your offer and make a call to action in the final paragraph.
+% 7. Sign off with a proper formal closing and your full name.
+% 8. Include one more achievement in the postscript to stand out.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \justifying
-I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
-My resume containing detailed work experience and education is attached.
+%I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
+I am applying for the position of [JOB POSITION NAME] in [COMPANY]. I started to analyze data since I enrolled in my Ph.D program in high energy physics and prepared myself to work with data by learning necessary knowledge and skills.
+
+
 %(USE A SENTENCE TO DESCRIBE THE REASON WHY APPLYING FOR THIS POSITION AT HERE.)
 
 %For the last three years I have worked in analyzing the data at CERN where I was responsible for the analysis of two physics processes using the data collected by the experiment and also for developing a new software framework to enhance the performance.
 %I am familiar with the C/C++ and Python languages because my doctorial research heavily relies on programming to analyze data.
-For the last three years I have worked in analyzing the data at CERN for my dissertation using C/C++ and Python.
-My physics Ph.D. background trained me to become a careful researcher and strengthened my problem solving skills allowing me to find the best way to reach correct answers.
-Because CERN is an international orginazation, my time at CERN also taught me how to work with colleagues coming from different countries with different cultures.
-Considering the differences between academia and industry, I am taking data analysis and machine learning courses from Codecademy and Coursera to help me to switch from the academia to the industry smoothly.
+%For the last three years I have worked in analyzing the data at CERN for my dissertation using C/C++ and Python.
+%My physics Ph.D. background trained me to become a careful researcher and strengthened my problem solving skills allowing me to find the best way to reach correct answers.
+The Ph.D. in high energy physics trained me to be a careful researcher and strengthened my problem solving skills.
+I have worked in analyzing the data collected by the ATLAS experiment at European Organization for Nuclear Research (CERN) for the past several years.
+In order to analyze the huge amount of data producted by the experiment, I build analysis framework using C/C++ and Python.
+The various analysis methods such as Monte Carlo simulation, even selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are virtualized using Python with PyRoot package.
+Finally, the signal are fitted and statistical interpretations are applied on the fitted results.
+Because CERN is a huge international orginazation, I learned how to collaborate with colleagues coming from different countries with different cultures while I relocated at CERN.
+ 
 
-I think my experience makes me an unique candidate to fit this challenging position and I would be able to benefit your team.
+Considering the differences between academia and industry, I took several data analysis and machine learning online courses from DataCamp, Codecademy and Coursera to familiar with the the knowledge and tools commonly used in the industry.
+I believe these courses can help me to switch from the academia to the industry smoothly.
+The skills such as querying data using SQL, manipulating and cleaning data using Pandas, virtualizing results using Matplotlib and Seaborn, and the machine learning using scikit-learn and Keras are in my toolbox now.
+After finishing capstone projects and receiving certificates from online courses, I participated in the competitions on Kaggle to sharp my data analysis skills and learn from other experts.
+
+
+I would welcome the chance to speak with you about the responsibilities of the [JOB POSITION NAME] position if you think I am a qualified candidate.
+My resume containing detailed work experience and education is attached.
+I think my background makes me an unique candidate to fit this challenging position and I would be a valuable addition to your team.
 I look forward to hearing from you.
 Thank you for your consideration.
 
-\vspace{0.5cm}
+
+\vspace{0.3cm}
 
 \makeletterclosing
 \end{document}
@@ -92,8 +118,7 @@ Thank you for your consideration.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% I am very excited about the Quantitative Research Analyst position and the prospect of leveraging my experience and skills in this role. It would be my pleasure to speak with you regarding my background and the responsibilities of this role. Please do not hesitate to contact me for an interview if you think my skills and qualifications align with your needs. Thank you very much for your time and consideration.
-% ---
+
 % Dear Ms. Hiring Manager,
 % I’m applying for the position of Senior Data Scientists (job id: 1234534). My resume with detailed work experience is enclosed. Based on the job description, I think this position looks both fun and challenging — and a great place for me to further my career! If you have a moment, I’d love to ask you more questions around the tools you’re using and the types of projects I might be running if hired.
 % And, if you have any questions about my resume, feel free to reach out over email or call me directly at my phone number in the signature.
