Update cover letter

--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -76,28 +76,27 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \justifying
-%I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
-I am applying for the position of [JOB POSITION NAME] in [COMPANY]. I started to analyze data since I enrolled in my Ph.D program in high energy physics and prepared myself to work with data by learning necessary knowledge and skills.
-
-
 %(USE A SENTENCE TO DESCRIBE THE REASON WHY APPLYING FOR THIS POSITION AT HERE.)
+%I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
+I am applying for the position of [JOB POSITION NAME] in [COMPANY].
+I started to analyze data since I enrolled in my Ph.D program in high energy physics and prepared myself to work with data by learning necessary knowledge and skills.
+
+Considering the differences between academia and industry, I took several data analysis and machine learning online courses from DataCamp, Codecademy and Coursera to become familiar with the knowledge and tools commonly used in the industry.
+I believe these courses can help me to switch from academia to the industry smoothly.
+The skills such as querying data using SQL, manipulating and cleaning data using Pandas, virtualizing results using Matplotlib and Seaborn, and machine learning using scikit-learn and Keras are in my toolbox now.
+After finishing capstone projects and receiving certificates from online courses, I participated in the competitions on Kaggle to sharpen my data analysis skills and learn from other experts.
 
 %For the last three years I have worked in analyzing the data at CERN where I was responsible for the analysis of two physics processes using the data collected by the experiment and also for developing a new software framework to enhance the performance.
 %I am familiar with the C/C++ and Python languages because my doctorial research heavily relies on programming to analyze data.
 %For the last three years I have worked in analyzing the data at CERN for my dissertation using C/C++ and Python.
 %My physics Ph.D. background trained me to become a careful researcher and strengthened my problem solving skills allowing me to find the best way to reach correct answers.
 The Ph.D. in high energy physics trained me to be a careful researcher and strengthened my problem solving skills.
-I have worked in analyzing the data collected by the ATLAS experiment at European Organization for Nuclear Research (CERN) for the past several years.
-In order to analyze the huge amount of data producted by the experiment, I build analysis framework using C/C++ and Python.
-The various analysis methods such as Monte Carlo simulation, even selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are virtualized using Python with PyRoot package.
-Finally, the signal are fitted and statistical interpretations are applied on the fitted results.
-Because CERN is a huge international orginazation, I learned how to collaborate with colleagues coming from different countries with different cultures while I relocated at CERN.
- 
-
-Considering the differences between academia and industry, I took several data analysis and machine learning online courses from DataCamp, Codecademy and Coursera to familiar with the the knowledge and tools commonly used in the industry.
-I believe these courses can help me to switch from the academia to the industry smoothly.
-The skills such as querying data using SQL, manipulating and cleaning data using Pandas, virtualizing results using Matplotlib and Seaborn, and the machine learning using scikit-learn and Keras are in my toolbox now.
-After finishing capstone projects and receiving certificates from online courses, I participated in the competitions on Kaggle to sharp my data analysis skills and learn from other experts.
+I have worked in analyzing the data collected by the ATLAS experiment at the European Organization for Nuclear Research (CERN) for the past several years.
+In high energy physics, we analyze the experimental data and compare the results with the theoretical predictions.
+In order to analyze the huge amount of data produced by the experiment, I developed an analysis framework using C/C++ and Python.
+The various analysis methods such as Monte Carlo simulation, event selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are virtualized using Python with the PyRoot package.
+Finally, the least Chi-square fit and statistical interpretations are applied on the data to extract signals.
+Because CERN is a huge international orginazation, I learned how to collaborate with colleagues coming from different countries with different cultures while I lived at CERN.
 
 
 I would welcome the chance to speak with you about the responsibilities of the [JOB POSITION NAME] position if you think I am a qualified candidate.
@@ -107,7 +106,7 @@ I look forward to hearing from you.
 Thank you for your consideration.
 
 
-\vspace{0.3cm}
+\vspace{0.01cm}
 
 \makeletterclosing
 \end{document}
