Update cover letter

--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -44,7 +44,7 @@
 \recipient{\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{12pt}{11pt}\selectfont {Company Name}  \normalfont}{Company Address}
 \date{\today}
 
-\opening{Dear madam or sir to whom it may concern:}
+\opening{Dear Madam or Sir to whom it may concern:}
 %\opening{To whom it may concern:}
 %\opening{Dear HIRING_MANAGER_NAME:}
 \closing{Yours faithfully,} % 非以對方姓氏稱呼對方時
@@ -80,6 +80,7 @@
 %I am interesting in the position of JOBPOSITION (job id: JOBID) with COMPANY.
 I am applying for the position of [JOB POSITION NAME] in [COMPANY].
 I started to analyze data since I enrolled in my Ph.D program in high energy physics and prepared myself to work with data by learning necessary knowledge and skills.
+
 
 Considering the differences between academia and industry, I took several data analysis and machine learning online courses from DataCamp, Codecademy and Coursera to become familiar with the knowledge and tools commonly used in the industry.
 I believe these courses can help me to switch from academia to the industry smoothly.
